[tool.poetry]
name = "regta"
version = "0.1.0-alpha.0"
description = "Lightweight framework for executing periodic async and sync jobs in python"
authors = ["Vladimir Alinsky <Vladimir@Alinsky.tech>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SKY-ALIN/regta"
repository = "https://github.com/SKY-ALIN/regta"
keywords = ["periodic", "regular", "async", "jobs", "sync", "tasks", "cron"]
include = [
    "LICENSE",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Environment :: Console",
    "Framework :: AsyncIO",
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.3"
pathlib = "^1.0.1"
Jinja2 = "^3.0.3"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
pylint = "^2.12.1"

[tool.poetry.scripts]
regta = "regta.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
