[tool.poetry]
name = "regta"
version = "0.3.0"
description = "Production-ready scheduler with async, multithreading and multiprocessing support."
authors = ["Vladimir Alinsky <Vladimir@Alinsky.tech>"]
license = "MIT"
readme = "README.md"
homepage = "https://regta.alinsky.tech"
repository = "https://github.com/SKY-ALIN/regta"
keywords = [
    "scheduler",
    "multithreading",
    "multiprocessing",
    "async",
    "jobs",
    "tasks",
    "cron",
    "periodic",
    "regular",
]
include = [
    "LICENSE",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Environment :: Console",
    "Framework :: AsyncIO",
]

[tool.poetry.dependencies]
python = "^3.7.2"
click = "^8.1.3"
Jinja2 = "^3.1.2"
asyncio = "^3.4.3"
regta-period = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
flake8 = "^5.0.4"
pylint = "^2.17.7"
Sphinx = "^4"
furo = "^2022.9.29"
m2r2 = "^0.3.2"
sphinx-copybutton = "^0.5.2"
no-optional = "^0.4.0"
isort = "^5.11.5"
mypy = "^1.4"

[tool.poetry.scripts]
regta = "regta.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
