[tool.poetry]
name = "docker_example_project"
version = "0.1.0"
description = ""
authors = ["Vladimir Alinsky <Vladimir@Alinsky.tech>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
regta = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
